fix: admin module

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "paths": {
       "@/*": ["src/*"],
       "@common/*": ["src/common/*"],
+      "@entity": ["src/entity"],
       "@entity/*": ["src/entity/*"],
     }
   }
