--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "nest-graceful",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "jic999",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
